ros2/log/build_2025-07-06_14-09-14/auv/stderr.log
  File "/home/wiredauv2024/AUV/WIRED24-25/ros2/install/auv/lib/python3.8/site-packages/auv/vn_logic.py", line 5
    def check_vn(heading, origin, bound)
                                       ^
SyntaxError: invalid syntax

